--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--header-->
     <header class="header">
       <div class="container">
-        <!--Навигация-->
+        <!--navigation-->
         <nav class="navigation">
           <a class="logo" href="#"
             ><span class="logo-accent">Web</span>Studio</a
@@ -33,22 +33,22 @@
             data-menu-button
           >
             <svg
-              height="40px"
-              width="40px"
+              height="40"
+              width="40"
               aria-label="переключатель мобильного меню"
             >
               <use
                 class="icon-menu"
-                href="./imagens/sprite.svg#icon-close-burger"
+                href="./images/sprite.svg#icon-buger"
               ></use>
               <use
                 class="icon-buger"
-                href="./imagens/sprite.svg#icon-close-for-burger"
+                href="./images/sprite.svg#icon-close-burger"
               ></use>
             </svg>
           </button>
           <div class="menu-container" id="menu-container" data-menu>
-            <ul class="navigation-menu">
+            <ul class="navigation-menu list">
               <li class="navigation-menu-item">
                 <a class="navigation-menu-link is-current" href="#">Студия</a>
               </li>
@@ -62,17 +62,17 @@
               </li>
             </ul>
 
-            <!--Адресс-->
+            <!--adress-->
             <address class="contact">
               <a class="contact-email" href="mailto:info@devstudio.com">
                 <svg class="contact-icon" width="15px" height="11px">
-                  <use href="imagens/sprite.svg#icon-mail"></use>
+                  <use href="./images/sprite.svg#icon-mail"></use>
                 </svg>
                 info@devstudio.com
               </a>
               <a class="contact-phone" href="tell:+380961111111">
                 <svg class="contact-icon" width="10px" height="15px">
-                  <use href="imagens/sprite.svg#icon-phone"></use>
+                  <use href="./images/sprite.svg#icon-phone"></use>
                 </svg>
                 +38 096 111 11 11
               </a>
@@ -665,5 +665,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
