--- a/index.html
+++ b/index.html
@@ -37,13 +37,10 @@
               width="40"
               aria-label="переключатель мобильного меню"
             >
+              <use class="icon-menu" href="./images/sprite.svg#burger"></use>
               <use
-                class="icon-menu"
-                href="./images/sprite.svg#icon-buger"
-              ></use>
-              <use
-                class="icon-buger"
-                href="./images/sprite.svg#icon-close-burger"
+                class="icon-close"
+                href="./images/sprite.svg#close-for-burger"
               ></use>
             </svg>
           </button>
@@ -86,7 +83,10 @@
       <!--hero-->
       <section class="hero">
         <div class="container">
-          <h1 class="title-hero">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="title-hero">
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
           <div>
             <button class="modal-btn" type="button" data-modal-open>
               Заказать услугу
@@ -584,7 +584,7 @@
         </div>
         <div class="footer-group">
           <p class="footer-slogan">Подпишитесь на рассылку</p>
-          <form action="#" class="footer-form">
+          <form class="footer-form">
             <p class="form-subscribe">
               <input
                 class="footer-form-input"
