--- a/portfolio.html
+++ b/portfolio.html
@@ -17,47 +17,72 @@
   </head>
 
   <body>
-    <!--<header class="header">
+    <!--header-->
+    <header class="header">
       <div class="container">
+        <!--navigation-->
         <nav class="navigation">
-          <a class="logo link" href="index.html">
-            <span class="logo-accent">Web</span>Studio</a
+          <a class="logo" href="index.html"
+            ><span class="logo-accent">Web</span>Studio</a
           >
-          <ul class="navigation-menu list">
-            <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="index.html">Студия</a>
-            </li>
-            <li class="navigation-menu-item">
-              <a
-                class="navigation-menu-link link is-current"
-                href="./portfolio.html"
-                >Портфолио</a
-              >
-            </li>
-            <li class="navigation-menu-item">
-              <a class="navigation-menu-link link" href="#">Контакты</a>
-            </li>
-          </ul>
+          <button
+            class="header-button"
+            type="button"
+            aria-expanded="false"
+            aria-controls="menu-container"
+            data-menu-button
+          >
+            <svg
+              height="40"
+              width="40"
+              aria-label="переключатель мобильного меню"
+            >
+              <use
+                class="icon-menu"
+                href="./images/sprite.svg#icon-burger"
+              ></use>
+              <use
+                class="icon-close"
+                href="./images/sprite.svg#icon-close-for-burger"
+              ></use>
+            </svg>
+          </button>
+          <div class="menu-container" id="menu-container" data-menu>
+            <ul class="navigation-menu list">
+              <li class="navigation-menu-item">
+                <a class="navigation-menu-link" href="#">Студия</a>
+              </li>
+              <li class="navigation-menu-item">
+                <a
+                  class="navigation-menu-link is-current"
+                  href="./portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="navigation-menu-item">
+                <a class="navigation-menu-link" href="#">Контакты</a>
+              </li>
+            </ul>
+
+            <!--adress-->
+            <address class="contact">
+              <a class="contact-email" href="mailto:info@devstudio.com">
+                <svg class="contact-icon" width="15px" height="11px">
+                  <use href="./images/sprite.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+              <a class="contact-phone" href="tell:+380961111111">
+                <svg class="contact-icon" width="10px" height="15px">
+                  <use href="./images/sprite.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </address>
+          </div>
         </nav>
-        <address class="address">
-          <a
-            class="header-address-contact link"
-            href="mailto:info@devstudio.com"
-          >
-            <svg class="header-address-icon" width="16" height="12">
-              <use href="./images/sprite.svg#icon-mail"></use>
-            </svg>
-            info@devstudio.com
-          </a>
-          <a class="header-address-contact link" href="tel:+380961111111">
-            <svg class="header-address-icon" width="10" height="16">
-              <use href="./images/sprite.svg#icon-phone"></use>
-            </svg>
-            +38 096 111 11 11
-          </a>
-        </address>
       </div>
-    </header>-->
+    </header>
 
     <!--portfolio-->
     <main>
@@ -479,70 +504,74 @@
     <!--foot-->
     <footer class="footer">
       <div class="container">
-        <div class="footer-address-container">
-          <a class="logo-footer link" href="#"
-            ><span class="logo-accent">Web</span>Studio
-          </a>
-          <address class="footer-contact">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul class="fotter-list list">
-              <li>
-                <a
-                  class="footer-contact-mail link"
-                  href="mailto:info@example.com"
-                  >info@example.com</a
-                >
+        <div class="footer-flex-container">
+          <div class="footer-address-container">
+            <a class="logo-footer link" href="#"
+              ><span class="logo-accent">Web</span>Studio
+            </a>
+            <address class="footer-contact">
+              <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+              <ul class="fotter-list list">
+                <li class="footer-contact-address">
+                  <a
+                    class="footer-contact-mail link"
+                    href="mailto:info@example.com"
+                    >info@example.com</a
+                  >
+                </li>
+                <li class="footer-contact-address">
+                  <a class="footer-contact-tel link" href="tel:+380991111111"
+                    >+38 099 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="footer-container-slogan">
+            <p class="footer-slogan">присоединяйтесь</p>
+            <ul class="footer-social-list list">
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li>
-                <a class="footer-contact-tel link" href="tel:+380991111111"
-                  >+38 099 111 11 11</a
-                >
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-social-list-item">
+                <a class="footer-social-link" href="">
+                  <svg class="footer-social-icon" width="20" height="20">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="footer-container-slogan">
-          <p class="footer-slogan">присоединяйтесь</p>
-          <ul class="footer-social-list list">
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-social-list-item">
-              <a class="footer-social-link" href="">
-                <svg class="footer-social-icon" width="20" height="20">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
           </div>
+        </div>
         <div class="footer-group">
           <p class="footer-slogan">Подпишитесь на рассылку</p>
-          <form action="#" class="footer-form">
-            <input
-              class="footer-form-input"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-            />
+          <form class="footer-form">
+            <p class="form-subscribe">
+              <input
+                class="footer-form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </p>
             <button class="button-subscribe" type="submit">
               <span class="subscribe-text">Подписаться</span>
               <svg width="24" height="24">
@@ -550,7 +579,6 @@
               </svg>
             </button>
           </form>
-        </div>
         </div>
       </div>
     </footer>
