--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             data-menu-button
           >
             <svg
-              height="40"
-              width="40"
+              height="40px"
+              width="40px"
               aria-label="переключатель мобильного меню"
             >
               <use class="icon-menu" href="./images/sprite.svg#burger"></use>
