--- a/portfolio.html
+++ b/portfolio.html
@@ -33,24 +33,21 @@
             data-menu-button
           >
             <svg
-              height="40"
-              width="40"
+              height="40px"
+              width="40px"
               aria-label="переключатель мобильного меню"
             >
-              <use
-                class="icon-menu"
-                href="./images/sprite.svg#icon-burger"
-              ></use>
+              <use class="icon-menu" href="./images/sprite.svg#burger"></use>
               <use
                 class="icon-close"
-                href="./images/sprite.svg#icon-close-for-burger"
+                href="./images/sprite.svg#close-for-burger"
               ></use>
             </svg>
           </button>
           <div class="menu-container" id="menu-container" data-menu>
             <ul class="navigation-menu list">
               <li class="navigation-menu-item">
-                <a class="navigation-menu-link" href="#">Студия</a>
+                <a class="navigation-menu-link" href="./index.html">Студия</a>
               </li>
               <li class="navigation-menu-item">
                 <a
@@ -582,5 +579,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
