--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
           </svg>
         </button>
         <p class="backdrop-slogan">Оставьте свои данные, мы вам перезвоним</p>
-        <form action class="backdrop-form">
+        <form action="#" class="backdrop-form">
           <label class="backdrop-form-field">
             Имя
             <span class="backdrop-form-input-wrapper">
