--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                   media="(min-width:1200px)"
                   srcset="
                     ./images/masters/img1-desk-1x.jpg 1x,
-                    ./img1-desk-2x.jpg                2x
+                    ./img1-desk-2x.jpg
                   "
                 />
                 <source
@@ -234,7 +234,7 @@
                   "
                 />
                 <source
-                  media="(min-width: 320px)"
+                  media="(min-width:320px)"
                   srcset="./images/masters/img1-1х.jpg 1x, ./img1-2х.jpg 2x"
                 />
                 <img
@@ -354,7 +354,7 @@
                   media="(min-width:768px)"
                   srcset="
                     ./images/masters/img3-tablet-1x.jpg 1x,
-                    ./img3-tablet-2x.jpg                2x
+                    ./img3-tablet-2x.jpg
                   "
                 />
                 <source
