--- a/index.html
+++ b/index.html
@@ -586,10 +586,10 @@
           <p class="footer-slogan">Подпишитесь на рассылку</p>
           <form class="footer-form">
             <p class="form-subscribe">
+              <label for="email"></label>
               <input
                 class="footer-form-input"
                 type="email"
-                name="email"
                 placeholder="E-mail"
               />
             </p>
