--- a/index.html
+++ b/index.html
@@ -218,24 +218,29 @@
           <h2 class="subtitle">Наша команда</h2>
           <ul class="workers-list list">
             <li class="workers-list-item">
-              <picture>
+              <picture class="workers-list-picture">
                 <source
-                  media="(min-width:1200px)"
                   srcset="
                     ./images/masters/img1-desk-1x.jpg 1x,
-                    ./img1-desk-2x.jpg
+                    ./images/masters/img1-desk-2x.jpg 2x
                   "
+                  media="(min-width: 1200px)"
                 />
+
                 <source
-                  media="(min-width:768px)"
                   srcset="
                     ./images/masters/img1-tablet-1х.jpg 1x,
-                    ./img1-tablet-2x.jpg                2x
+                    ./images/masters/img1-tablet.jpg    2x
                   "
+                  media="(min-width: 768px)"
                 />
+
                 <source
+                  srcset="
+                    ./images/masters/img1-1х.jpg 1x,
+                    ./images/masters/img1-2х.jpg 2x
+                  "
                   media="(min-width:320px)"
-                  srcset="./images/masters/img1-1х.jpg 1x, ./img1-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
@@ -280,24 +285,29 @@
               </div>
             </li>
             <li class="workers-list-item">
-              <picture>
+              <picture class="workers-list-picture">
                 <source
-                  media="(min-width:1200px)"
                   srcset="
                     ./images/masters/img2-desk-1x.jpg 1x,
-                    ./img2-desk-2x.jpg
+                    ./images/masters/img2-desk-2x.jpg 2x
                   "
+                  media="(min-width: 1200px)"
                 />
+
                 <source
-                  media="(min-width:768px)"
                   srcset="
                     ./images/masters/img2-tablet-1x.jpg 1x,
-                    ./img2-tablet-2x.jpg
+                    ./images/masters/img2-tablet-2x.jpg 2x
                   "
+                  media="(min-width: 768px)"
                 />
+
                 <source
+                  srcset="
+                    ./images/masters/img2-1х.jpg 1x,
+                    ./images/masters/img2-2х.jpg 2x
+                  "
                   media="(min-width:320px)"
-                  srcset="./images/masters/img2-1х.jpg 1x, ./img2-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
@@ -342,24 +352,27 @@
               </div>
             </li>
             <li class="workers-list-item">
-              <picture>
+              <picture class="workers-list-picture">
                 <source
-                  media="(min-width:1200px)"
                   srcset="
                     ./images/masters/img3-desk-1x.jpg 1x,
-                    ./img3-desk-2x.jpg
+                    ./images/masters/img3-desk-2x.jpg 2x
                   "
+                  media="(min-width: 1200px)"
                 />
                 <source
-                  media="(min-width:768px)"
                   srcset="
                     ./images/masters/img3-tablet-1x.jpg 1x,
-                    ./img3-tablet-2x.jpg
+                    ./images/masters/img3-tablet-2x.jpg 2x
                   "
+                  media="(min-width: 768px)"
                 />
                 <source
-                  media="(min-width:320px)"
-                  srcset="./images/masters/img3-1х.jpg 1x, ./img3-2х.jpg 2x"
+                  srcset="
+                    ./images/masters/img3-1х.jpg 1x,
+                    ./images/masters/img3-2х.jpg 2x
+                  "
+                  media="(min-width: 320px)"
                 />
                 <img
                   class="workers-photo"
@@ -404,24 +417,29 @@
               </div>
             </li>
             <li class="workers-list-item">
-              <picture>
+              <picture class="workers-list-picture">
                 <source
-                  media="(min-width:1200px)"
                   srcset="
                     ./images/masters/img4-desk-1x.jpg 1x,
-                    ./img4-desk-2x.jpg                2x
+                    ./images/masters/img4-desk-2x.jpg 2x
                   "
+                  media="(min-width: 1200px)"
                 />
+
                 <source
-                  media="(min-width:768px)"
                   srcset="
                     ./images/masters/img4-tablet-1x.jpg 1x,
-                    ./img4-tablet-2x.jpg
+                    ./images/masters/img4-tablet-2x.jpg 2x
                   "
+                  media="(min-width: 768px)"
                 />
+
                 <source
+                  srcset="
+                    ./images/masters/img4-1х.jpg 1x,
+                    ./images/masters/img4-2х.jpg 2x
+                  "
                   media="(min-width:320px)"
-                  srcset="./images/masters/img4-1х.jpg 1x, ./img4-2х.jpg 2x"
                 />
                 <img
                   class="workers-photo"
