--- a/portfolio.html
+++ b/portfolio.html
@@ -122,21 +122,21 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img11-1х.jpg 1x,
-                        ./img11-2х.jpg                  2x
+                        ./images/portfolio/img11-2х.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img11.jpg 1x,
-                        ./img11-d2x.jpg              2x
+                        ./images/portfolio/img11.jpg     1x,
+                        ./images/portfolio/img11-d2x.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img11-t1x.jpg 1x,
-                        ./img11-t2x.jpg                  2x
+                        ./images/portfolio/img11-t2x.jpg 2x
                       "
                     />
                     <img
@@ -166,23 +166,23 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img22-1х.jpg 1x,
-                        ./img22-2х.jpg                  2x
+                        ./images/portfolio/img22-2х.jpg 2x
                       " />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img22.jpg 1x,
-                        ./img22-d2x.jpg              2x
+                        ./images/portfolio/img22.jpg     1x,
+                        ./images/portfolio/img22-d2x.jpg 2x
                       " />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img22-t1x.jpg 1x,
-                        ./img22-t2x.jpg                  2x
+                        ./images/portfolio/img22-t2x.jpg 2x
                       " />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img22.jpg"
+                      src="./images/portfolio/exm2.jpg"
                       alt="гра в баскетбол"
                   /></picture>
 
@@ -208,23 +208,23 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img33-1х.jpg 1x,
-                        ./img33-2х.jpg                  2x
+                        ./images/portfolio/img33-2х.jpg 2x
                       " />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img33.jpg 1x,
-                        ./img33-d2x.jpg              2x
+                        ./images/portfolio/img33.jpg     1x,
+                        ./images/portfolio/img33-d2x.jpg 2x
                       " />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img33-t1x.jpg 1x,
-                        ./img33-t2x.jpg                  2x
+                        ./images/portfolio/img33-t2x.jpg 2x
                       " />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img33.jpg"
+                      src="./images/portfolio/exm3.jpg"
                       alt="лого ресторану"
                   /></picture>
 
@@ -248,23 +248,23 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img44-1х.jpg 1x,
-                        ./img44-2х.jpg                  2x
+                        ./images/portfolio/img44-2х.jpg 2x
                       " />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img44.jpg 1x,
-                        ./img44-d2x.jpg              2x
+                        ./images/portfolio/img44.jpg     1x,
+                        ./images/portfolio/img44-d2x.jpg 2x
                       " />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img44-t1x.jpg 1x,
-                        ./img44-t2x.jpg                  2x
+                        ./images/portfolio/img44-t2x.jpg 2x
                       " />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img44.jpg"
+                      src="./images/portfolio/exm4.jpg"
                       alt="наушники"
                   /></picture>
 
@@ -288,23 +288,23 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img55-1х.jpg 1x,
-                        ./img55-2х.jpg                  2x
+                        ./images/portfolio/img55-2х.jpg 2x
                       " />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img55.jpg 1x,
-                        ./img55-d2x.jpg              2x
+                        ./images/portfolio/img55.jpg     1x,
+                        ./images/portfolio/img55-d2x.jpg 2x
                       " />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img55-t1x.jpg 1x,
-                        ./img55-t2x.jpg                  2x
+                        ./images/portfolio/img55-t2x.jpg 2x
                       " />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img55.jpg"
+                      src="./images/portfolio/exm5.jpg"
                       alt="бокси"
                   /></picture>
 
@@ -328,23 +328,23 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img66-1х.jpg 1x,
-                        ./img66-2х.jpg                  2x
+                        ./images/portfolio/img66-2х.jpg 2x
                       " />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img66.jpg 1x,
-                        ./img66-d2x.jpg              2x
+                        ./images/portfolio/img66.jpg     1x,
+                        ./images/portfolio/img66-d2x.jpg 2x
                       " />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img66-t1x.jpg 1x,
-                        ./img66-t2x.jpg                  2x
+                        ./images/portfolio/img66-t2x.jpg 2x
                       " />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img66.jpg"
+                      src="./images/portfolio/exm6.jpg"
                       alt="монитор компютера"
                   /></picture>
 
@@ -370,26 +370,26 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img77-1х.jpg 1x,
-                        ./img77-2х.jpg                  2x
+                        ./images/portfolio/img77-2х.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img77.jpg 1x,
-                        ./img77-d2x.jpg              2x
+                        ./images/portfolio/img77.jpg     1x,
+                        ./images/portfolio/img77-d2x.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img77-t1x.jpg 1x,
-                        ./img77-t2x.jpg                  2x
+                        ./images/portfolio/img77-t2x.jpg 2x
                       "
                     />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img77.jpg"
+                      src="./images/portfolio/exm7.jpg"
                       alt="журнал"
                     />
                   </picture>
@@ -414,26 +414,26 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img88-1х.jpg 1x,
-                        ./img88-2х.jpg                  2x
+                        ./images/portfolio/img88-2х.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img88.jpg 1x,
-                        ./img88-d2x.jpg              2x
+                        ./images/portfolio/img88.jpg     1x,
+                        ./images/portfolio/img88-d2x.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img88-t1x.jpg 1x,
-                        ./img88-t2x.jpg                  2x
+                        ./images/portfolio/img88-t2x.jpg 2x
                       "
                     />
                     <img
                       class="work-examples-images"
-                      src="./images/portfolio/img88.jpg"
+                      src="./images/portfolio/exm8.jpg"
                       alt="марка"
                     />
                   </picture>
@@ -458,21 +458,21 @@
                       media="(max-width:767 )"
                       srcset="
                         ./images/portfolio/img99-1х.jpg 1x,
-                        ./img99-2х.jpg                  2x
+                        ./images/portfolio/img99-2х.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:1200px )"
                       srcset="
-                        ./images/portfolio/img99.jpg 1x,
-                        ./img99-d2x.jpg              2x
+                        ./images/portfolio/img99.jpg     1x,
+                        ./images/portfolio/img99-d2x.jpg 2x
                       "
                     />
                     <source
                       media="(min-width:768 )"
                       srcset="
                         ./images/portfolio/img99-t1x.jpg 1x,
-                        ./img99-t2x.jpg                  2x
+                        ./images/portfolio/img99-t2x.jpg 2x
                       "
                     />
                     <img
