--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                 placeholder="E-mail"
               />
             </p>
-            <button class="button-subscribe" type="submit">
+            <button class="button-subscribe step-btn" type="submit">
               <span class="subscribe-text">Подписаться</span>
               <svg width="24" height="24">
                 <use href="./images/sprite.svg#send"></use>
