задано ширину картинкам 100%

--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="work-examples-content">
+                <div class="work-examples-contentheight">
                   <h2 class="work-examples-title">Проект Prime</h2>
                   <p class="work-examples-text">Маркетинг</p>
                 </div>
