--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="work-examples-contentheight">
+                <div class="work-examples-content">
                   <h2 class="work-examples-title">Проект Prime</h2>
                   <p class="work-examples-text">Маркетинг</p>
                 </div>
@@ -562,10 +562,10 @@
           <p class="footer-slogan">Подпишитесь на рассылку</p>
           <form class="footer-form">
             <p class="form-subscribe">
+              <label for="email"></label>
               <input
                 class="footer-form-input"
                 type="email"
-                name="email"
                 placeholder="E-mail"
               />
             </p>
